8290082: [PPC64] ZGC C2 load barrier stub needs to preserve vector registers